* Fully support the Active and NBA scheduling regions as defined by the
  SystemVerilog standard (IEEE 1800-2017 chapter 4). This means all generated
  clocks are now simulated correctly (#3278, #3384). [Geza Lore, Shunyao CAD]
* Support timing controls (delays, event controls in any location, wait
  statements) and forks. See docs for details. [Krzysztof Bieganski, Antmicro Ltd]


Verilator 4.227 devel
==========================

**Announcement:**

* The next release is anticipated primere Verilator Version 5.  Please
  consider beta-testing the github 'develop-v5' branch, which will soon
  merge into the github 'master' branch (#3383).

**Minor:**

* Support IEEE constant signal strengths (#3601). [Ryszard Rozak/Antmicro]
* Add --main to generate main() C++ (previously was experimental only).
* Rename --bin to --build-dep-bin.
* Fix thread saftey in SystemC VL_ASSIGN_SBW/WSB (#3494) (#3513). [Mladen Slijepcevic]
* Fix crash in gate optimization of circular logic (#3543). [Bill Flynn]
* Fix arguments in non-static method call (#3547) (#3582). [Gustav Svensk]
* Fix default --mod-prefix when --prefix is repeated (#3603). [Geza Lore]
* Fix typedef'ed class conversion to boolean (#3616). [Aleksander Kiryk]


Verilator 4.226 2022-08-31
==========================

**Minor:**

* Add --future0 and --future1 options.
* Support class parameters (#2231) (#3541). [Arkadiusz Kozdra/Antmicro]
* Support wildcard index associative arrays (#3501). [Arkadiusz Kozdra/Antmicro]
* Support negated properties (#3572). [Aleksander Kiryk]
* Support $test$plusargs(expr) (#3489).
* Rename trace rolloverSize() (#3570).
* Improve Verilation speed with --threads on large designs. [Geza Lore]
* Fix struct pattern assignment (#2328) (#3517). [Mostafa Gamal]
* Fix public combo propagation issues (#2905). [Todd Strader]
* Fix incorrect tristate logic (#3399) [shareefj, Vighnesh Iyer]
* Fix incorrect bit op tree optimization (#3470). [algrobman]
* Fix bisonpre for MSYS2 (#3471).